Fix zoombar and mobile toolbar icon positioning on IE11

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
@@ -70,7 +70,7 @@
     &:before {
       padding: 0;
       margin: 0;
-      position: unset;
+      position: static;
     }
   }
   .toolPane {
